whitespace & lineheight fixers

--- a/src/static/global.scss
+++ b/src/static/global.scss
@@ -22,13 +22,15 @@ body {
   color: $text;
   max-width: max-content;
   &_title {
+    // background: pink;
     max-width: max-content;
     background: $bg;
+    line-height: 172px;
     font-size: 182px;
-    letter-spacing: 0.3px;
+    letter-spacing: -10px;
     font-weight: 700;
     color: $paragraph;
-    padding-right: 3.5rem;
+    padding-right: 2rem;
   }
 }
 .btn {
